syntax = "proto3";
package members.v1.common;


message RegisteredProto {
    string id            =1;
    string file_name     =2;
    bytes  data          =3;
    string last_update   =4;
}

message ProtoMeta {
    string id           =1;
    string project_key  =2;
    string  version     =3;
    string registration =4;
}
